Добавлены несколько окон. Шаблонные UI элементы объеденены в 1 классе Widgets. Цвет кнопок перенесен в ресурсы

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="accept_button_padding">20</string>
     <string name="title_activity_registration">RegistrationActivity</string>
     <string name="title_activity_log_in">LogInActivity</string>
+    <string name="title_activity_main_page">MainPage</string>
+    <string name="title_activity_add_tree">AddTreeActivity</string>
 </resources>
