--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_log_in">LogInActivity</string>
     <string name="title_activity_main_page">MainPage</string>
     <string name="title_activity_add_tree">AddTreeActivity</string>
+    <string name="title_activity_trees_view">TreesViewActivity</string>
 </resources>
