Начал работу с JSON, сделал первое добавление и считывание. Надо придумать UI для окошка персоны, чтобы удобно создавать Линейные и Нижние группы + Родаков назначать нормально

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_add_tree">AddTreeActivity</string>
     <string name="title_activity_trees_view">TreesViewActivity</string>
     <string name="title_activity_empty_tree_first_person_create">EmptyTreeFirstPersonCreate</string>
+    <string name="title_activity_tree_body_updater">TreeBodyUpdaterActivity</string>
 </resources>
